[package]
description = "Standalone blockchain bloom filter"
homepage = "https://github.com/debris/bloomchain"
name = "bloomchain"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
license = "MIT"
keywords = ["ethereum", "ethcore", "bloom", "chain", "filter"]

[dependencies]

[dev-dependencies]
rustc-serialize = "0.3"
rand = "0.3"
