[package]
description = "Standalone blockchain bloom filter"
homepage = "https://github.com/paritytech/bloomchain"
name = "bloomchain"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
license = "MIT"
keywords = ["ethereum", "parity", "bloom", "chain", "filter"]

[dev-dependencies]
tests-util = { path = "tests_util" }
