[package]
description = "Standalone blockchain bloom filter"
homepage = "https://github.com/paritytech/bloomchain"
name = "bloomchain"
version = "0.2.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
license = "MIT"
keywords = ["ethereum", "parity", "bloom", "chain", "filter"]

[dependencies]
ethbloom = "0.2"

[dev-dependencies]
tests-util = { path = "tests_util" }
